--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     for (let i = 0; i <= 100; i++) {
         let box = document.createElement('div')
         box.classList.add('txtBox')
-        box.innerHTML = "Savage <span>LOVES</span> Angie"
+        box.innerHTML = "Some <span>DUMMY</span> Text"
         document.querySelector('.text').appendChild(box)
         
     }
